# Gordon1966

./: CMakeLists.txt
.github/workflows/: linux-pull-request.yml  linux-push.yml  macos-pull-request.yml  macos-push.yml  windows-pull-request.yml  windows-push.yml
ci/Linux/: publish-to-s3.sh
ci/Windows/: publish-to-s3.sh
source/: dllmain.cpp
